tests/ui/tool-attributes/nested-disallowed.stderr
error: `register_tool` only accepts identifiers
  --> $DIR/nested-disallowed.rs:2:18
   |
LL | #![register_tool(foo::bar)]
   |                  ^^^^^^^^ not an identifier

error: aborting due to 1 previous error

