tests/ui/tool-attributes/nested-disallowed.rs
#![feature(register_tool)]
#![register_tool(foo::bar)] //~ ERROR only accepts identifiers

fn main() {}
